kubernetes/base/blog-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-api
spec:
  selector:
    app: blog-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
