kubernetes/base/blog-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-api
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  rules:
  - host: dev-api.petedillo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-api
            port:
              number: 8080
